<resources>
    <string name="app_name">MobileApp-Plusroom</string>
    <string name="viviendas">Viviendas</string>
    <string name="search">Search</string>
    <string name="departamento">Departamento</string>
    <string name="locales_comerciales">Locales Comerciales</string>
    <string name="cuartos">Cuartos</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="welcome_n_nto_complete_">To complete your registration, we recommend that you complete your information to improve your profile.</string>
    <string name="set_your_profile">Set your profile</string>
    <string name="see_my_profile">See my profile</string>
</resources>