<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8F3"
    tools:context=".SearchActivity">

    <Button
        android:id="@+id/btGotoReceivedMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="218dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="@color/white2"
        android:textColor="@color/black"
        app:icon="@android:drawable/sym_action_chat"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Message" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:text="Categoría" />

    <Button
        android:id="@+id/btHousing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/skyblue"
        android:text="@string/viviendas"
        android:textColor="#064789"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRooms" />

    <TextView
        android:id="@+id/tvSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="43dp"
        android:shadowColor="@color/material_dynamic_neutral60"
        android:text="@string/search"
        android:textColor="@color/blue60"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btApartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/skyblue"
        android:text="@string/departamento"
        android:textColor="#064789"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/material_dynamic_neutral40"
        app:endIconDrawable="?android:attr/actionModeWebSearchDrawable"
        app:endIconScaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Buscar inmueble"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btCommercialProperty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/skyblue"
        android:text="@string/locales_comerciales"
        android:textColor="#064789"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btApartment" />

    <Button
        android:id="@+id/btRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/skyblue"
        android:text="@string/cuartos"
        android:textColor="#064789"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCommercialProperty" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPosts"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

</androidx.constraintlayout.widget.ConstraintLayout>